--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
+
+html, body, #root {
+  height: 100%;
+}
+
+.main-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+}
+
+.input-initial {
+  min-width: 250px;
+  margin-bottom: 20px;
+}
+
+.send-container {
+  display: flex;
+  flex-direction: row;
+}
+
 .App {
   text-align: center;
 }
